@@ -646,10 +646,10 @@ PREAMBLE_LY = '''%%%% Generated by %(program_name)s
 
 #(set! toplevel-score-handler print-score-with-defaults)
 #(set! toplevel-music-handler
- (lambda (p m)
- (if (not (eq? (ly:music-property m \'void) #t))
-    (print-score-with-defaults
-    p (scorify-music m p)))))
+  (lambda (p m)
+   (if (not (eq? (ly:music-property m \'void) #t))
+        (print-score-with-defaults
+        p (scorify-music m p)))))
 
 #(ly:set-option (quote no-point-and-click))
 #(define inside-lilypond-book #t)
@@ -666,13 +666,13 @@ PREAMBLE_LY = '''%%%% Generated by %(program_name)s
 %% ****************************************************************
 
 \paper {
- #(define dump-extents #t)
- %(font_dump_setting)s
- %(paper_string)s
+  #(define dump-extents #t)
+  %(font_dump_setting)s
+  %(paper_string)s
 }
 
 \layout {
- %(layout_string)s
+  %(layout_string)s
 }
 '''
 
